--- a/CostFunction.ipynb
+++ b/CostFunction.ipynb
@@ -50,6 +50,13 @@
     "\n",
     "    return final_cost"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b> Above you can see the example code of qudratic error cost function </b>"
+   ]
   }
  ],
  "metadata": {
