--- a/Housing_prices.ipynb
+++ b/Housing_prices.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('/home/delux/Загрузки/kc_house_data.csv')"
+    "df = pd.read_csv('TOP_SECRET')"
    ]
   },
   {
